bon/tests/integration/ui/compile_fail/attr_getter.stderr
error: `start_fn` attribute can't be specified together with `getter`
 --> tests/integration/ui/compile_fail/attr_getter.rs:5:23
  |
5 |     #[builder(getter, start_fn)]
  |                       ^^^^^^^^

error: `finish_fn` attribute can't be specified together with `getter`
  --> tests/integration/ui/compile_fail/attr_getter.rs:11:23
   |
11 |     #[builder(getter, finish_fn)]
   |                       ^^^^^^^^^

error: `skip` attribute can't be specified together with `getter`
  --> tests/integration/ui/compile_fail/attr_getter.rs:17:23
   |
17 |     #[builder(getter, skip)]
   |                       ^^^^

error: `getter` attribute can't be specified together with `overwritable`
  --> tests/integration/ui/compile_fail/attr_getter.rs:23:15
   |
23 |     #[builder(getter, overwritable)]
   |               ^^^^^^

error[E0277]: the trait bound `String: std::marker::Copy` is not satisfied
  --> tests/integration/ui/compile_fail/attr_getter.rs:42:9
   |
42 |     x1: String,
   |         ^^^^^^ the trait `std::marker::Copy` is not implemented for `String`
   |
note: required by a bound in `copy_member`
  --> src/__/better_errors.rs
   |
   | pub fn copy_member<T: Copy>(member: &Option<T>) -> Option<T> {
   |                       ^^^^ required by this bound in `copy_member`

error[E0277]: the trait bound `String: std::marker::Copy` is not satisfied
  --> tests/integration/ui/compile_fail/attr_getter.rs:45:16
   |
45 |     x2: Option<String>,
   |                ^^^^^^ the trait `std::marker::Copy` is not implemented for `String`
   |
note: required by a bound in `copy_member`
  --> src/__/better_errors.rs
   |
   | pub fn copy_member<T: Copy>(member: &Option<T>) -> Option<T> {
   |                       ^^^^ required by this bound in `copy_member`

error[E0277]: the trait bound `String: std::marker::Copy` is not satisfied
  --> tests/integration/ui/compile_fail/attr_getter.rs:48:9
   |
48 |     x3: String,
   |         ^^^^^^ the trait `std::marker::Copy` is not implemented for `String`
   |
note: required by a bound in `copy_member`
  --> src/__/better_errors.rs
   |
   | pub fn copy_member<T: Copy>(member: &Option<T>) -> Option<T> {
   |                       ^^^^ required by this bound in `copy_member`

error[E0277]: the trait bound `NonClone: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_getter.rs:57:9
   |
57 |     x1: NonClone,
   |         ^^^^^^^^ the trait `Clone` is not implemented for `NonClone`
   |
help: consider annotating `NonClone` with `#[derive(Clone)]`
   |
52 + #[derive(Clone)]
53 | struct NonClone;
   |

error[E0277]: the trait bound `NonClone: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_getter.rs:60:16
   |
60 |     x2: Option<NonClone>,
   |                ^^^^^^^^ the trait `Clone` is not implemented for `NonClone`, which is required by `Option<NonClone>: Clone`
   |
   = note: required for `Option<NonClone>` to implement `Clone`
help: consider annotating `NonClone` with `#[derive(Clone)]`
   |
52 + #[derive(Clone)]
53 | struct NonClone;
   |

error[E0277]: the trait bound `NonClone: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_getter.rs:63:9
   |
63 |     x3: NonClone,
   |         ^^^^^^^^ the trait `Clone` is not implemented for `NonClone`, which is required by `Option<NonClone>: Clone`
   |
   = note: required for `Option<NonClone>` to implement `Clone`
help: consider annotating `NonClone` with `#[derive(Clone)]`
   |
52 + #[derive(Clone)]
53 | struct NonClone;
   |

error[E0277]: the member `Unset<negative_test_builder::members::x1>` was not set, but this method requires it to be set
  --> tests/integration/ui/compile_fail/attr_getter.rs:69:13
   |
69 |     builder.get_x1();
   |             ^^^^^^ the member `Unset<negative_test_builder::members::x1>` was not set, but this method requires it to be set
   |
   = help: the trait `IsSet` is not implemented for `Unset<negative_test_builder::members::x1>`
   = help: the trait `IsSet` is implemented for `Set<Name>`
note: required by a bound in `NegativeTestBuilder::<S>::get_x1`
  --> tests/integration/ui/compile_fail/attr_getter.rs:27:10
   |
27 | #[derive(Builder)]
   |          ^^^^^^^ required by this bound in `NegativeTestBuilder::<S>::get_x1`
...
30 |     x1: u32,
   |     -- required by a bound in this associated function
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the member `Unset<negative_test_builder::members::x2>` was not set, but this method requires it to be set
  --> tests/integration/ui/compile_fail/attr_getter.rs:70:13
   |
70 |     builder.get_x2();
   |             ^^^^^^ the member `Unset<negative_test_builder::members::x2>` was not set, but this method requires it to be set
   |
   = help: the trait `IsSet` is not implemented for `Unset<negative_test_builder::members::x2>`
   = help: the trait `IsSet` is implemented for `Set<Name>`
note: required by a bound in `NegativeTestBuilder::<S>::get_x2`
  --> tests/integration/ui/compile_fail/attr_getter.rs:27:10
   |
27 | #[derive(Builder)]
   |          ^^^^^^^ required by this bound in `NegativeTestBuilder::<S>::get_x2`
...
33 |     x2: Option<u32>,
   |     -- required by a bound in this associated function
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the member `Unset<negative_test_builder::members::x3>` was not set, but this method requires it to be set
  --> tests/integration/ui/compile_fail/attr_getter.rs:71:13
   |
71 |     builder.get_x3();
   |             ^^^^^^ the member `Unset<negative_test_builder::members::x3>` was not set, but this method requires it to be set
   |
   = help: the trait `IsSet` is not implemented for `Unset<negative_test_builder::members::x3>`
   = help: the trait `IsSet` is implemented for `Set<Name>`
note: required by a bound in `NegativeTestBuilder::<S>::get_x3`
  --> tests/integration/ui/compile_fail/attr_getter.rs:27:10
   |
27 | #[derive(Builder)]
   |          ^^^^^^^ required by this bound in `NegativeTestBuilder::<S>::get_x3`
...
36 |     x3: u32,
   |     -- required by a bound in this associated function
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
